--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+afancontrol (2.0.0~b2-1) stretch; urgency=medium
+
+  * Fix hddtemp not expanding glob
+
+ -- Kostya Esmukov <kostya@esmukov.ru>  Mon, 29 Apr 2019 19:04:42 +0000
+
 afancontrol (2.0.0~b1-1) stretch; urgency=medium
 
   * Initial release
